@@ -3,9 +3,9 @@
   <modelVersion>4.0.0</modelVersion>
 
   <parent>
-    <groupId>org.sonatype.oss</groupId>
-    <artifactId>oss-parent</artifactId>
-    <version>9</version>
+    <groupId>com.codbex</groupId>
+    <artifactId>platform-parent</artifactId>
+    <version>1.0.0-SNAPSHOT</version>
   </parent>
 
   <name>codbex - kronos - parent</name>
@@ -39,15 +39,8 @@
 
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 
-    <dirigible.version>10.4.1</dirigible.version>
-
-    <java.version>17</java.version>
-    <maven.compiler.source>17</maven.compiler.source>
-    <maven.compiler.target>17</maven.compiler.target>
-
     <scmVersionType>branch</scmVersionType>
     <profile.content.phase>none</profile.content.phase>
-    <license.header.location>licensing-header.txt</license.header.location>
 
     <antlr4-maven-plugin.version>4.13.1</antlr4-maven-plugin.version>
     <maven.compiler.plugin.version>3.12.1</maven.compiler.plugin.version>
@@ -182,25 +175,6 @@
 
   <dependencyManagement>
     <dependencies>
-      <dependency>
-        <groupId>com.codbex.olingo</groupId>
-        <artifactId>olingo-odata2-lib</artifactId>
-        <version>${olingo.version}</version>
-        <type>pom</type>
-      </dependency>
-      <dependency>
-        <groupId>com.codbex.olingo</groupId>
-        <artifactId>olingo-odata2-core</artifactId>
-        <version>${olingo.version}</version>
-      </dependency>
-      <dependency>
-        <groupId>org.eclipse.dirigible</groupId>
-        <artifactId>dirigible-dependencies</artifactId>
-        <version>${dirigible.version}</version>
-        <type>pom</type>
-        <scope>import</scope>
-      </dependency>
-
       <dependency>
         <groupId>org.webjars</groupId>
         <artifactId>webjars-locator</artifactId>
@@ -487,133 +461,6 @@
         <version>${project.version}</version>
       </dependency>
     </dependencies>
-
   </dependencyManagement>
-
-  <profiles>
-    <profile>
-      <id>default</id>
-      <activation>
-        <activeByDefault>true</activeByDefault>
-      </activation>
-      <build>
-        <plugins>
-          <plugin>
-            <groupId>org.apache.maven.plugins</groupId>
-            <artifactId>maven-surefire-plugin</artifactId>
-            <version>${maven.surefire.plugin.version}</version>
-            <configuration>
-              <argLine>
-                --add-opens java.base/java.lang=ALL-UNNAMED
-                --add-opens java.base/java.math=ALL-UNNAMED
-                --add-opens java.base/java.util=ALL-UNNAMED
-                --add-opens java.base/java.util.concurrent=ALL-UNNAMED
-                --add-opens java.base/java.net=ALL-UNNAMED
-                --add-opens java.base/java.text=ALL-UNNAMED
-              </argLine>
-            </configuration>
-          </plugin>
-          <plugin>
-            <groupId>org.jacoco</groupId>
-            <artifactId>jacoco-maven-plugin</artifactId>
-            <version>${jacoco.version}</version>
-            <executions>
-              <execution>
-                <id>prepare-agent</id>
-                <goals>
-                  <goal>prepare-agent</goal>
-                </goals>
-              </execution>
-            </executions>
-            <configuration>
-              <rules>
-                <rule>
-                  <element>SOURCEFILE</element>
-                  <excludes>
-                    <exclude>*src/test/*</exclude>
-                  </excludes>
-                </rule>
-              </rules>
-            </configuration>
-          </plugin>
-          <plugin>
-            <groupId>org.apache.maven.plugins</groupId>
-            <artifactId>maven-compiler-plugin</artifactId>
-            <version>${maven.compiler.plugin.version}</version>
-            <configuration>
-              <source>${maven.compiler.source}</source>
-              <target>${maven.compiler.target}</target>
-              <debug>true</debug>
-              <debuglevel>lines,vars,source</debuglevel>
-            </configuration>
-          </plugin>
-        </plugins>
-      </build>
-    </profile>
-    <profile>
-      <id>license</id>
-      <activation>
-        <activeByDefault>true</activeByDefault>
-      </activation>
-      <build>
-        <plugins>
-          <plugin>
-            <groupId>com.mycila</groupId>
-            <artifactId>license-maven-plugin</artifactId>
-            <version>${license-maven-plugin.version}</version>
-            <inherited>true</inherited>
-            <configuration>
-              <header>${license.header.location}</header>
-              <aggregate>true</aggregate>
-              <properties>
-                <inceptionYear>${project.inceptionYear}</inceptionYear>
-                <currentYear>${currentYear}</currentYear>
-              </properties>
-              <includes>
-                <include>src/**/*.java</include>
-                <include>src/**/*.xml</include>
-                <include>src/**/*.js</include>
-              </includes>
-              <excludes>
-                <exclude>**/logback.xml</exclude>
-                <exclude>**/logback-test.xml</exclude>
-                <exclude>**/src/test/resources/**</exclude>
-                <exclude>resources/resources-neo-sdk/**</exclude>
-              </excludes>
-            </configuration>
-            <dependencies>
-              <dependency>
-                <groupId>com.mycila</groupId>
-                <artifactId>license-maven-plugin-git</artifactId>
-                <version>${license-maven-plugin.version}</version>
-              </dependency>
-            </dependencies>
-            <executions>
-              <execution>
-                <id>format-license</id>
-                <phase>initialize</phase>
-                <goals>
-                  <goal>format</goal>
-                </goals>
-              </execution>
-            </executions>
-          </plugin>
-          <plugin>
-            <groupId>org.apache.maven.plugins</groupId>
-            <artifactId>maven-compiler-plugin</artifactId>
-            <version>${maven.compiler.plugin.version}</version>
-            <configuration>
-              <source>${maven.compiler.source}</source>
-              <target>${maven.compiler.target}</target>
-              <debug>true</debug>
-              <debuglevel>lines,vars,source</debuglevel>
-            </configuration>
-          </plugin>
-        </plugins>
-      </build>
-    </profile>
-
-  </profiles>
-
 
 </project>
